feat: report api
